<resources>
    <string name="app_name">Demos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="back">返回</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">打开悬浮窗口</string>
    <string name="action_switch_day_night_mode">切换昼夜模式</string>
    <string name="title_activity_thread_pool_demo">ThreadPoolDemo</string>
    <string name="info_thread_pool_demo">ThreadPoolDemo</string>
    <string name="title_activity_red_envelope_demo">AccessibilityDemo</string>
    <string name="info_red_envelope_demo">Accessibility自动服务</string>
    <string name="title_activity_tts_demo">TTSDemo</string>
    <string name="info_tts_demo">"安卓文字转语音"</string>
    <string name="title_activity_simple_recycler_demo">SimpleRecyclerViewDemo</string>
    <string name="info_simple_recycler_demo">简单的recyclerView的demo</string>
    <string name="title_activity_data_binding_demo">DataBindingDemo</string>
    <string name="info_data_binding_demo">简单的dataBinding的demo</string>
    <string name="title_activity_status_bar_demo">StatusBarDemo</string>
    <string name="info_status_bar_demo">简单的StatusBarDemo</string>
    <string name="title_activity_net_demo">NetDemos</string>
    <string name="info_net_demo">网络相关的各种demo集合</string>
    <string name="title_activity_wifi_p2p_demo">WifiP2PDemo</string>
    <string name="info_wifi_p2p_demo">简单的WifiP2PDemo</string>
    <string name="title_text_demo">TextDemo</string>
    <string name="info_text_demo">文字textView相关功能demo</string>
    <string name="title_anim_demo">AnimDemo</string>
    <string name="info_anim_demo">安卓动画相关功能demo</string>
    <string name="title_database_demo">DatabaseDemo</string>
    <string name="info_database_demo">安卓sqlite数据库相关功能demo</string>
    <string name="title_cache_demo">cacheDemo</string>
    <string name="info_cache_demo">安卓缓存相关功能demo</string>
    <string name="title_ethereum_demo">EthereumDemo</string>
    <string name="info_ethereum_demo">以太坊区块链相关功能Demo</string>
    <string name="title_file">FileDemo</string>
    <string name="info_file">文件操作相关</string>
    <string name="title_dialog">DialogAndWidgetDemo</string>
    <string name="info_dialog">对话框和自定义组件</string>
    <string name="title_scale_view">ScaleViewDemo</string>
    <string name="info_scale_view">可选择范围的刻度尺</string>
    <string name="title_touch">TouchDemo</string>
    <string name="info_touch">触摸相关demo</string>
    <string name="title_activity_chart_demo">ChartDemo</string>
    <string name="info_chart_demo">安卓图表</string>
    <string name="auto_input_label">自动帐号输入</string>
    <string name="red_envelope_label">抢红包</string>
    <string name="red_envelope_btn">开启自动抢红包服务</string>
    <string name="red_envelope_btn_close">"关闭自动抢红包服务"</string>
    <string name="testaccessibility">accessibilityDemo</string>
    <string name="red_envelope_desc">WebChat Get RedMoney</string>
    <string name="auto_input_desc">Arknights AutoInput</string>
    <string name="title_ble">BLEDemo</string>
    <string name="info_ble">设备间蓝牙通信</string>
    <string name="title_net_config">NetConfigDemo</string>
    <string name="info_net_config">配网解决方案</string>
    <string name="title_media_manager">MediaManager</string>
    <string name="info_media_manager">媒体文件管理</string>
    <string name="title_test">TestDemo</string>
    <string name="test_ui">测试demo</string>
    <string name="title_surface">SurfaceViewDemo</string>
    <string name="surface_ui">&#160;&#160;测试 SurfaceView</string>
    <string name="title_image">ImageDemo</string>
    <string name="image_ui">测试 Image</string>
    <string name="title_webview">WebViewDemo</string>
    <string name="info_webview">测试WebView</string>
    <string name="title_ui">UiDemo</string>
    <string name="info_ui">所有ui相关的demo</string>
    <string name="title_jetpack">jetPackDemo</string>
    <string name="info_jetpack">所有jetPack相关的demo</string>
    <string name="title_wheel">WheelDemo</string>
    <string name="info_wheel">滚动条demo</string>
    <string name="icon_guanbi">&#xe62b;</string>
    <string name="icon_shijain">&#xe6bc;</string>
    <string name="icon_wifi">&#xe656;</string>
    <string name="icon_riqi">&#xe604;</string>
    <string name="icon_jiudian">&#xe7b9;</string>
    <string name="icon_lanyalianjie">&#xe8e9;</string>
    <string name="icon_fangjian">&#xe613;</string>
    <string name="icon_gengduo">&#xed2e;</string>
    <string name="icon_icon_unlock">&#xe61d;</string>
    <string name="icon_ic_lock">&#xe61e;</string>
    <string name="icon_icon_close">&#xe61f;</string>
    <string name="icon_ic_passoword">&#xe620;</string>
    <string name="icon_ic_open">&#xe621;</string>
    <string name="icon_ic_detail">&#xe622;</string>
    <string name="icon_ic_home">&#xe623;</string>
    <string name="icon_ic_menu">&#xe624;</string>
    <string name="icon_ic_back">&#xe625;</string>
    <string name="icon_icon_unlock1">&#xe626;</string>
    <string name="icon_close_bt">&#xe627;</string>
    <string name="title_activity_kotlin">KotlinActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_media_images">MediaImagesActivity</string>
    <string name="tab_text_all_images">全部图片</string>
    <string name="tab_text_image_files">相册</string>
    <string name="pickerview_cancel">Cancel</string>
    <string name="pickerview_submit">Confirm</string>
    <string name="pickerview_year">Y</string>
    <string name="pickerview_month">M</string>
    <string name="pickerview_day">D</string>
    <string name="pickerview_hours">H</string>
    <string name="pickerview_minutes">M</string>
    <string name="pickerview_seconds">S</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="shortcut_short_protected_files">保护</string>
    <string name="shortcut_long_protected_files">文件保护</string>
    <string name="shortcut_disabled_protected_files">文件保护不可用</string>
    <string name="shortcut_short_alias">Alias</string>
    <string name="shortcut_long_alias">app样式</string>
    <string name="shortcut_disabled_alias">app样式无法修改</string>
</resources>